--- a/PunchoutUtils.csproj
+++ b/PunchoutUtils.csproj
@@ -23,6 +23,8 @@
 		- Changed the Quantity property to a float, since you could buy 1.3 KG of salt for example
 		- Throw an exception on an invalid type (now just ignores the field)
 		- Made the Id property actually do a thing
+		- Boolean deserialization is more accessable (ANY value will now return true, empty/null returns false)
+		- Made priceunit nullable
 	</PackageReleaseNotes>
   </PropertyGroup>
 
